--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,8 @@
 APP_NAME="CRM Pro"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_DEBUG=false
+APP_URL=https://your-app-name.up.railway.app
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -22,6 +22,6 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-SANCTUM_STATEFUL_DOMAINS=localhost:5173
-SESSION_DOMAIN=localhost
-SPA_URL=http://localhost:5173
+SANCTUM_STATEFUL_DOMAINS=your-frontend-domain.vercel.app,localhost:5173
+SESSION_DOMAIN=.railway.app
+SPA_URL=https://your-frontend-domain.vercel.app
